feat(discovery): implement all bootstrap phase api
